# munbox

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: test.yml
cmake/: munboxConfig.cmake.in
cmd/: CMakeLists.txt  main.c
docs/: STYLE_GUIDE.md
docs/internals/: appledouble.md  architecture.md  bin.md  cpt.md  hqx.md  sit.md  sit13.md  sit15.md
include/: munbox.h
lib/: CMakeLists.txt  munbox.c
lib/layers/: bin.c  cpt.c  hqx.c  sit.c  sit13.c  sit15.c
test/: run_tests.sh
test/data/: additional_test_generator.c  md5sums.txt
test/data/data/: test_data_generator.c
